--- a/templates/validation/dashboard.html
+++ b/templates/validation/dashboard.html
@@ -4,6 +4,17 @@
 
 {% block content %}
 <div class="container-fluid py-4">
+    <div class="row mb-2">
+        <div class="col-12">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Home</a></li>
+                    <li class="breadcrumb-item"><a href="{{ url_for('main.tournament_detail', tournament_id=tournament.id) }}">{{ tournament.name }}</a></li>
+                    <li class="breadcrumb-item active">Validation</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
     <div class="row mb-4">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
